# pocket-py

./: .gitignore  ARCHITECTURE.md  GETTING_STARTED.md  README.md  pyproject.toml  test_pygame.py
examples/: README.md  counter_app.py  hello_world.py  hello_world_pygame.py  todo_app.py
pocketpy/: __init__.py
pocketpy/backends/: README.md  __init__.py  pygame_backend.py
pocketpy/core/: __init__.py  animation.py  app.py  gestures.py  navigator.py  state.py  theme.py
pocketpy/layout/: __init__.py  advanced.py  hbox.py  vbox.py
pocketpy/widgets/: __init__.py  base.py  button.py  card.py  image.py  label.py  slider.py  switch.py  textinput.py
