[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pocketpy"
version = "0.1.0"
description = "A modern Python mobile framework"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Mohammad Abu-Khader", email = "mohammad.abukhader@hotmail.com"}
]
maintainers = [
    {name = "Mohammad Abu-Khader", email = "mohammad.abukhader@hotmail.com"}
]
keywords = ["mobile", "framework", "ui", "python"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/pocketpy"
Documentation = "https://github.com/yourusername/pocketpy#readme"
Repository = "https://github.com/yourusername/pocketpy.git"
Issues = "https://github.com/yourusername/pocketpy/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["pocketpy*"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.ruff]
line-length = 88
target-version = "py38"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
